--- a/teste.html
+++ b/teste.html
@@ -8,12 +8,8 @@
     <link rel="stylesheet" type="text/css" href="teste_css.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js">
-
-    </script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -56,8 +52,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="">My Page</a></li>
-                        <li><a href="#">Seettings</a></li>
+                        <li><a href="http://paliari.url.ph/">Calculos de media</a></li>
+                        <li><a href="http://paliari.com.br/">My page</a></li>
 
                         <li class="divider"></li>
                         <li><a href="#">Log Out</a></li>
@@ -70,6 +66,7 @@
 </div>
 <br><br>
 <br>
+
 <div class="row">
     <div class="col-md-12 text-center">
         PAGINA EM DESENVOLVIMENTO...
@@ -82,10 +79,11 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="col-md-4 pull-right">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <span class="glyphicon glyphicon-lock"></span> Login
+                    <div>Esta área ainda está em desenvolvimento</div>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal" role="form">
@@ -118,10 +116,10 @@
                         </div>
                         <div class="form-group last">
                             <div class="col-sm-offset-3 col-sm-9">
-                                <button type="submit" class="btn btn-success btn-sm">
+                                <button type="submit" class="btn btn-success btn-sm" id="primeiro_alert">
                                     Sign in
                                 </button>
-                                <button type="reset" class="btn btn-default btn-sm">
+                                <button type="reset" class="btn btn-default btn-sm" id="segundo_alert">
                                     Reset
                                 </button>
                             </div>
@@ -129,19 +127,20 @@
                     </form>
                 </div>
                 <div class="panel-footer">
-                    Not Registred? <a href="http://www.jquery2dotnet.com">Register here</a></div>
+                    Not Registred? <a href="http://localhost:63342/Projetos_git/teste/cadastro.html">Register here</a></div>
             </div>
+        </div>
+        <div class="col-md-6 pull-letf">
+            <img src="" alt="" class="img-circle" width="100">
+        </div>
+        <div class="col-md-6 text-center">
+            <img src="" alt="" class="img-thumbnail" width="200">
         </div>
     </div>
 </div>
+</div>
 
 <div class="row">
-    <div class="col-md-6 text-left">
-        <img src="" alt="" class="img-circle" width="100">
-    </div>
-    <div class="col-md-6 text-right">
-        <img src="" alt="..." class="img-thumbnail" width="200">
-    </div>
 </div>
 </body>
 </html>
