--- a/cadastro.html
+++ b/cadastro.html
@@ -15,9 +15,8 @@
 <body>
 
 <div class="container">
-
     <div class="col-md-4 col-md-offset-4">
-        Nome completo
+        Nome Completo
         <input type="text" class="form-control">
 
         Email
@@ -30,18 +29,18 @@
         <input type="text" class="form-control">
 
         <div class="form-group">
-            <label>Sexo:</label>
-                <br>
-                <input value="+" type="radio" name="operacao">Masculino
-                <br>
-                <input value="-" type="radio" name="operacao">Feminino
-
+            Sexo:
+            <br>
+            <input type="radio" name="sexo">Masculino
+            <br>
+            <input type="radio" name="sexo">Feminino
         </div>
 
         <div class="date">
+            Data
             <input type="date" class="form-control">
         </div>
-
+        <br>
         <div class="row">
             <div class="col-md-4">Cidade
                 <select class="form-control">
@@ -57,18 +56,22 @@
                 </select>
             </div>
 
-            <div class="col-md-4"><b>Pa&iacute;s</b>
+            <div class="col-md-4">Pa&iacute;s
                 <select class="form-control">
                     <option></option>
                     <option></option>
                 </select>
             </div>
-
         </div>
-
-        <b>Qualidades:</b>
-        <textarea class="form-control"></textarea>Confere se o seu cadastro esta de acordo e nos envie
-        <button class="btn btn-primary">Enviar <i class="icon-white icon-arrow-right"></i>
+        <br>
+        Qualidades:
+        <textarea class="form-control"></textarea>
+        <br>
+        <div>
+            Confira se o seu cadastro esta de acordo e nos envie
+        </div>
+        <button class="btn btn-primary">
+            Enviar <i class="icon-white icon-arrow-right"></i>
         </button>
     </div>
 </div>
