--- a/teste.html
+++ b/teste.html
@@ -116,10 +116,10 @@
                         </div>
                         <div class="form-group last">
                             <div class="col-sm-offset-3 col-sm-9">
-                                <button type="submit" class="btn btn-success btn-sm" id="primeiro_alert">
+                                <button type="submit" class="btn btn-success btn-sm">
                                     Sign in
                                 </button>
-                                <button type="reset" class="btn btn-default btn-sm" id="segundo_alert">
+                                <button type="reset" class="btn btn-default btn-sm">
                                     Reset
                                 </button>
                             </div>
