--- a/cadastro.html
+++ b/cadastro.html
@@ -1,19 +1,15 @@
 <!doctype html>
-<html>
-
+<html ng-app="plunker">
 <head>
-    <title>New Page</title>
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <title>Cadastro</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <script src="include_date.js"></script>
+    <title>Plunker - http://angular-ui.github.io/bootstrap/</title>
 </head>
-
 <body>
-
 <div class="container">
     <div class="col-md-4 col-md-offset-4">
         Nome Completo
@@ -37,44 +33,60 @@
         </div>
 
         <div class="date">
-            Data
-            <input type="date" class="form-control">
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-4">Cidade
-                <select class="form-control">
-                    <option></option>
-                    <option></option>
-                </select>
+            Date:
+            <div ng-controller="DatepickerDemoCtrl">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="input-group">
+                            <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt"
+                                   is-open="opened"
+                                   min="minDate" max="'2015-06-22'" datepicker-options="dateOptions"
+                                   date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"/>
+              <span class="input-group-btn">
+                <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i>
+                </button>
+              </span>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4">Cidade
+                        <select class="form-control">
+                            <option></option>
+                            <option></option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-4">Estado
+                        <select class="form-control">
+                            <option></option>
+                            <option></option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-4">Pa&iacute;s
+                        <select class="form-control">
+                            <option></option>
+                            <option></option>
+                        </select>
+                    </div>
+                </div>
             </div>
 
-            <div class="col-md-4">Estado
-                <select class="form-control">
-                    <option></option>
-                    <option></option>
-                </select>
-            </div>
+            <br>
+            Qualidades:
+            <textarea class="form-control"></textarea>
 
-            <div class="col-md-4">Pa&iacute;s
-                <select class="form-control">
-                    <option></option>
-                    <option></option>
-                </select>
+            <div>
+                Confira se o seu cadastro esta de acordo e nos envie
             </div>
+            <button class="btn btn-primary" type="submit">
+                Enviar
+                <i class="fa fa-arrow-right"></i>
+            </button>
         </div>
-        <br>
-        Qualidades:
-        <textarea class="form-control"></textarea>
-        <br>
-        <div>
-            Confira se o seu cadastro esta de acordo e nos envie
-        </div>
-        <button class="btn btn-primary">
-            Enviar <i class="icon-white icon-arrow-right"></i>
-        </button>
     </div>
-</div>
 </body>
 
 </html>
