--- a/page_login.html
+++ b/page_login.html
@@ -14,7 +14,7 @@
 
 <body>
 <div class="container">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -24,39 +24,25 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Paliari</a>
+            <a class="navbar-brand" href="http://paliari.url.ph">Paliari</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">More Information</a></li>
-                        <li><a href="#">Make Me a Question</a></li>
-                    </ul>
+                <li><a href="http://paliari.url.ph/bd/social/social.html">Social</a></li>
+                <li><a onclick="alert('Desculpe mas esta funcao ainda nao foi desenvolvida')" href="#">Fale conosco</a>
                 </li>
             </ul>
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acesse <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="http://paliari.url.ph/">Calculos de media</a></li>
-                        <li><a href="http://paliari.com.br/">My page</a></li>
-
+                        <li><a href="http://paliari.url.ph/bd/calculadora/calculadora.html">Calculadora</a></li>
+                        <li><a href="http://paliari.url.ph/bd/calculos_media/index.php">Calculos de media</a></li>
+                        <li><a href="http://paliari.url.ph/bd/mensagens.php">Mensgens</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Log Out</a></li>
+                        <li><a href="http://paliari.url.ph">Voltar</a></li>
                     </ul>
                 </li>
             </ul>
@@ -67,14 +53,7 @@
 <br><br>
 <br>
 
-<div class="row">
-    <div class="col-md-12 text-center">
-        PAGINA EM DESENVOLVIMENTO...
-        <div>
-            <img src="http://preloaders.net/preloaders/496/Flip%20Flop.gif" alt="..." class="img-circle">
-        </div>
-    </div>
-</div>
+
 <br>
 
 <div class="container">
