Alterações na navbar e correcão de alguns bug

--- a/page_login.html
+++ b/page_login.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-<div class="container">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+
+    <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -49,7 +50,6 @@
         </div>
         <!-- /.navbar-collapse -->
     </nav>
-</div>
 <br><br>
 <br>
 
@@ -62,13 +62,14 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <span class="glyphicon glyphicon-lock"></span> Login
-                    <div>Esta área ainda está em desenvolvimento</div>
+                    <div>Esta area ainda esta em desenvolvimento</div>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
                             <label for="inputEmail3" class="col-sm-3 control-label">
-                                Email</label>
+                                Email
+                            </label>
 
                             <div class="col-sm-9">
                                 <input type="email" class="form-control" id="inputEmail3" placeholder="Email" required>
@@ -109,17 +110,12 @@
                     Not Registred? <a href="http://localhost:63342/Projetos_git/teste/cadastro.html">Register here</a></div>
             </div>
         </div>
-        <div class="col-md-6 pull-letf">
-            <img src="" alt="" class="img-circle" width="100">
-        </div>
-        <div class="col-md-6 text-center">
-            <img src="" alt="" class="img-thumbnail" width="200">
+
+
+            <div class="col-md-6 pull-left">
+                <img src="http://www.kitconcursos.com/imagens/Area_de_Membros.png" alt="" class="img-thumbnail" width="200">
+            </div>
         </div>
     </div>
-</div>
-</div>
-
-<div class="row">
-</div>
 </body>
 </html>
