--- a/social.html
+++ b/social.html
@@ -10,8 +10,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default " role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -49,26 +48,28 @@
     <br><br>
     <br><br>
     <br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 pull-left">
+                <div>
+                    <a href="https://github.com/carlospaliari" target="_blank">
+                        <i class="fa fa-github-square fa-4x"></i>Github
+                    </a>
+                </div>
+            </div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <div>
-                <a href="https://github.com/carlospaliari" target="_blank">
-                    <i class="fa fa-github-square fa-4x"></i>Github
-                </a>
-            </div>
-            <div>
+            <div class="col-md-4 pull-left">
                 <a href="https://www.facebook.com/carloseduardo.campanhapaliari" target="_blank">
-                    <i class="fa fa-facebook-square fa-4x"></i>abook
+                    <i class="fa fa-facebook-square fa-4x"></i>acebook
                 </a>
             </div>
-            <div    >
+            <div class="col-md-4 pull-left">
                 <a href="https://plus.google.com/u/0/108523489182657970353/posts" target="_blank">
                     <i class="fa fa-google-plus-square fa-4x"></i>Google mais
                 </a>
             </div>
         </div>
+
     </div>
-</div>
 </body>
 </html>
