--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -10,12 +10,11 @@
     <title>Plunker - http://angular-ui.github.io/bootstrap/</title>
 </head>
 <body>
-<div class="container">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+    <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -49,26 +48,27 @@
     </nav>
 <br><br>
 <br>
-    <div class="col-md-4 col-md-offset-4">
-        Nome Completo
-        <input type="text" class="form-control">
+    <div class="container">
+        <div class="col-md-4 col-md-offset-4">
+            Nome Completo
+            <input type="text" class="form-control">
 
-        Email
-        <input type="email" class="form-control" id="inputEmail5" required>
+            Email
+            <input type="email" class="form-control" id="inputEmail5" required>
 
-        Senha
-        <input type="text" class="form-control">
+            Senha
+            <input type="text" class="form-control">
 
-        Insira sua senha novamente
-        <input type="text" class="form-control">
+            Insira sua senha novamente
+            <input type="text" class="form-control">
 
-        <div class="form-group">
-            Sexo:
-            <br>
-            <input type="radio" name="sexo">Masculino
-            <br>
-            <input type="radio" name="sexo">Feminino
-        </div>
+            <div class="form-group">
+                Sexo:
+                <br>
+                <input type="radio" name="sexo">Masculino
+                <br>
+                <input type="radio" name="sexo">Feminino
+            </div>
 
         <div class="date">
             Date:
