--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -34,10 +34,10 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acesse <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="http://paliari.url.ph/bd/login/page_login.html">Login</a></li>
+                        <li><a href="http://paliari.url.ph">Login</a></li>
                         <li><a href="http://paliari.url.ph/bd/calculadora/calculadora.html">Calculadora</a></li>
                         <li><a href="http://paliari.url.ph/bd/calculos_media/index.php">Calculos de media</a></li>
-                        <li><a href="http://paliari.url.ph/bd/mensagens.php">Mensgens</a></li>
+                        <li><a href="http://paliari.url.ph/bd/index.php">Mensgens</a></li>
                         <li class="divider"></li>
                         <li><a href="http://paliari.url.ph/">Voltar</a></li>
                     </ul>
