alterações de titulos e organizando links

--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -4,7 +4,7 @@
   Source can be edited via http://jsbin.com/UPoQiWA/2/edit
 -->
 <head>
-    <title>New Page</title>
+    <title>Calculadora</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -41,9 +41,9 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acesse <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="http://paliari.url.ph/bd/login/page_login.html">Login</a></li>
+                    <li><a href="http://paliari.url.ph/">Login</a></li>
                     <li><a href="http://paliari.url.ph/bd/calculos_media/index.php">Calculos de media</a></li>
-                    <li><a href="http://paliari.url.ph/bd/mensagens.php">Mensgens</a></li>
+                    <li><a href="http://paliari.url.ph/bd/index.php">Mensgens</a></li>
                     <li class="divider"></li>
                     <li><a href="http://paliari.url.ph/">Voltar</a></li>
                 </ul>
