--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>New Page</title>
+    <title>Paliari</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="teste_css.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -41,9 +41,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="http://paliari.url.ph/bd/calculadora/calculadora.html">Calculadora</a></li>
                         <li><a href="http://paliari.url.ph/bd/calculos_media/index.php">Calculos de media</a></li>
-                        <li><a href="http://paliari.url.ph/bd/mensagens.php">Mensgens</a></li>
-                        <li class="divider"></li>
-                        <li><a href="http://paliari.url.ph">Voltar</a></li>
+                        <li><a href="http://paliari.url.ph/bd/index.php">Mensgens</a></li>
                     </ul>
                 </li>
             </ul>
