add  nos titulos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Paliari</title>
+    <title> Paliari</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="teste_css.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
