--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="plunker">
 <head>
-    <title> Cadastro</title>
+    <title>Cadastro</title>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
