--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>Paliari</title>
+    <link rel="icon" type="image/png" href="icons.png">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="teste_css.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
