--- a/calculo_tempo/calculo_tempo.html
+++ b/calculo_tempo/calculo_tempo.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Calculo Tempo</title>
+    <link rel="icon" type="image/png" href="icons.png">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
