--- a/calculo_tempo/calculo_tempo.html
+++ b/calculo_tempo/calculo_tempo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="plunker">
 <head>
     <title>Calculo Tempo</title>
     <link rel="icon" type="image/png" href="icons.png">
@@ -11,8 +11,36 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
+    <script src="date.js"></script>
+    <title>Plunker - http://angular-ui.github.io/bootstrap/</title>
 </head>
 <body>
+
+
+
+<div class="date">
+    Date:
+    <div ng-controller="DatepickerDemoCtrl">
+        <div class="row">
+            <div class="col-md-12">
+                <p class="input-group">
+                    <input type="text" class="form-control" datepicker-popup="{{format}}"
+                           ng-model="dt" is-open="opened"
+                           min="minDate" max="'2015-06-22'" datepicker-options="dateOptions"
+                           date-disabled="disabled(date, mode)" ng-required="true"
+                           close-text="Close"/>
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" ng-click="open($event)">
+                                    <i class="glyphicon glyphicon-calendar"></i>
+                                </button>
+                            </span>
+                </p>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
