test input date

--- a/calculo_tempo/calculo_tempo.html
+++ b/calculo_tempo/calculo_tempo.html
@@ -35,12 +35,11 @@
                                      <i class="glyphicon glyphicon-calendar"></i>
                                  </button>
                              </span>
-
                  </p>
              </div>
-
          </div>
      </div>
+    <input type="datetime-local" class="form-control">
 </div>
 </body>
 </html>
